style/_form.scss
/* ... */
// base for checkbox and radio's
%boxgroup {
	input {
		-webkit-appearance: none;
		-moz-appearance: none;
		appearance: none;
		cursor: pointer;
	}



	&.box input {
		margin: 0;
		color: config.$colorMain;
		min-width: config.$baseLineHeight;
		min-height: config.$baseLineHeight;
		width: config.$baseLineHeight;
		height: config.$baseLineHeight;
		background-color: config.$colorBackgroundInput;
		border: config.$borderWidth solid config.$colorOutline;
		border-radius: math.div(config.$borderRadius, 2);
		&:before { // tick
			content: '';
			transform: scale(0);
			display:inline-block;
			margin: 0-(config.$borderWidth);
			width: config.$baseLineHeight;
			height: config.$baseLineHeight;
			transition: 90ms transform ease-in-out;
			background-color: currentColor;
		}
		&:checked:before { // tick-on
			transform: scale(1);
		}
		&:focus {
			border-color: config.$colorMain;
			//box-shadow: 0 0 0 1px $colorMain;
		}
		&[style]:checked:before {
			color: var(--tickColor, var(--fg-text))
		}
	}

	&.button{
		.control {
			flex-wrap: nowrap;

			span.box-label {
				//put here and not below for extra strong rules
				padding: util.dp(11) util.dp(18);
				margin:0;
			}

			input:checked + span.box-label.outlined, input:checked + span.box-label {
				background-color: config.$colorFocus;
				color: inherit;
			}
		}

		span.box-label {
			@extend .goui-button;
			i.icon {
				vertical-align: middle;
				margin-right: util.dp(8);
			}
		}
		
		input {
			margin: 0;
			padding-left: 0; //icon is rendered in label
		}

	}

	.wrap {
		background-color: transparent;
		border: none;
		border-radius: 0;
	}

	.label {
		display: none;
	}

	.control {
		display: flex;
		align-items: center;
		flex-wrap: wrap;
		.box-label {
			flex: 1;
			display: block;
			overflow: hidden;
			text-overflow: ellipsis;
			white-space: nowrap;
			padding: util.dp(14) util.dp(12);
			margin: auto 0;
			user-select: none;
			-webkit-user-select: none;
			-moz-user-select: none;
			color: config.$colorText;
		}
	}
}


%input {
	//background-color:transparent; // Transparent Makes date field in safari unusable
	background-color: config.$colorBackgroundInput;
	border-radius: inherit;
	font: config.$fontBase;
	//min-width: dp(100); //for select element
	margin: 0;
	border: 0;
	padding: util.dp(11) util.dp(16);
	width: 100%;
	color: config.$colorText;
	display: block;// for text area which has inline-block by default and gets some extra margin

	&::placeholder {
		transition: all 200ms linear;
		color: config.$colorTextPlaceholder;
	}
}

.goui-pit {
	@extend %control-pit;

	// draws line between items inside a pit in event dialog for example
	> div > div + div {
		border-top: config.$borderWidth solid config.$colorOutline;
	}
	border: 0;
	&:not(.goui-form-field):not(:empty), &.has-value{
		padding-bottom: util.dp(12);
		margin-bottom: util.dp(-12);
		border: config.$borderWidth solid config.$colorOutline;
	}
}



.goui-form-field, .goui-display-field {
	display: flex;
	flex-direction: column;
//	width: 100%;
	margin: 0;
	position: relative;

	.suffix {
		padding-right: 1.6rem;
		color: var(--fg-secondary-text);
	}

	.prefix {
		padding: 1.1rem 0 1.1rem 1.6rem;
		line-height: 2.4rem;
		color: var(--fg-secondary-text);
		pointer-events: none;
		cursor: default;
	}

	.input {
		//position: relative;
		flex: 1;
		border-radius: inherit;
		display: flex;
		min-width: 0; // for shrinking smaller than content
	}
}

.goui-display-field {

	a {
		color: config.$colorMain;
	}

	&.pit {

		.wrap {
			@extend %control-pit;

			div.control {
				min-height: util.dp(46);
				overflow: auto;
				white-space: normal;
				word-wrap: break-word;
			}


			div.label {
				display: flex;
				align-items: center;
				top:0;
				overflow: visible;
				pointer-events: none;
				height: config.$borderWidth;
				background-color: config.$colorBackgroundInput;
			}
		}
	}

	&.right {
		.control {
			text-align: right;
		}
	}

	&.with-icon {
		.wrap {
			div.label {
				//left: util.dp(48);
				//padding: 0 util.dp(4);
			}
			.control {
				padding-left: util.dp(10);
			}
		}
	}

	&.error {
		.wrap{
			.control {
				color: config.$colorError;
			}
		}
	}

	&.success {
		.wrap {
			.control {
				color: config.$colorSuccess;
			}
		}
	}

	&.warning {
		.wrap {
			.control {
				color: config.$colorWarning;
			}
		}
	}
	&.notice {
		.wrap {
			.control {
				color: config.$colorNotice;
			}
		}
	}

	.wrap {
		flex: 1;
		align-items: center;
		overflow:hidden;
		display: flex;
		flex-flow: row nowrap;
		border: config.$borderWidth solid transparent;

		> i {
			width: util.dp(24);
			height: util.dp(24);
			margin: util.dp(11) util.dp(0) util.dp(11) util.dp(16);
		}

		div.label {
			padding: 0 util.dp(4);
			font-size: util.sp(13);
			line-height: util.sp(13);
			display:block;
			//display: flex;
			//align-items: center;
			overflow: hidden;
			text-overflow: ellipsis;
			white-space: nowrap;
			color: config.$colorTextSecondary;
			vertical-align: top;
			position:absolute;
			left: util.dp(12);
			top: util.dp(-6.5);
		}

		.control {
			font: config.$fontBase;
			min-width: util.dp(22); //for select element
			margin: 0;
			border: 0;
			padding: util.dp(11) util.dp(16);
			flex: 1 1;
			//width: 100%;
			//outline: none;
			color: config.$colorText;
			//display: flex;// for text area which has inline-block by default and gets some extra margin. But it breaks overflow ellipsis

			overflow: hidden;
			text-overflow: ellipsis;
			white-space: nowrap;

			i.icon {
				align-self: center;
			}
		}
	}


}
/* ... */

